--- a/files/archlinux/PKGBUILD
+++ b/files/archlinux/PKGBUILD
@@ -1,15 +1,16 @@
 # Maintainer: Thomas Gubler <thomasgubler@gmail.com>
-pkgname=python2-mavlink-git
-pkgver=20140119
+# blindly changed python2 to python3 in 2025, completely untested -pb
+pkgname=python3-mavlink-git
+pkgver=20250412
 pkgrel=1
 pkgdesc="Python implementation of the MAVLink protocol"
 arch=(any)
 url="https://github.com/ArduPilot/pymavlink"
 license=('LGPL3')
-depends=('python2')
-makedepends=('git' 'python2' 'python2-setuptools')
+depends=('python3')
+makedepends=('git' 'python3' 'python3-setuptools')
 optdepends=()
-provides=('python2-mavlink-git')
+provides=('python3-mavlink-git')
 conflicts=()
 options=(!emptydirs)
 
@@ -34,12 +35,12 @@ build() {
   git clean -fdx
 
   msg "Starting make..."
-  python2 setup.py build
+  python3 setup.py build
 }
 
 package() {
   cd "$srcdir/$_gitname/$_subfoldername"
-  python2 setup.py install --prefix=/usr --root=$pkgdir/ --optimize=1
+  python3 setup.py install --prefix=/usr --root=$pkgdir/ --optimize=1
 
   install -Dm644 "$srcdir/$_gitname/$_subfoldername/README.txt" "$pkgdir/usr/share/licenses/$pkgname/README.txt"
 }
