pyproject.toml: remove lxml
This file is for build depenencies only. lxml is only needed at runtime.
Removing this dependency makes our build CI simpler and more reliable.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,5 +2,5 @@
 # you need to drop setup_requires from setup.py as well.
 # https://peps.python.org/pep-0518/#rationale
 [build-system]
-requires = ["setuptools>=42","future","lxml","cython"]
+requires = ["setuptools>=42","future","cython"]
 build-backend = "setuptools.build_meta"
