--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -96,7 +96,7 @@ jobs:
           python-version: 3.8
       - name: Install dependencies
         run: |
-          pip install future lxml
+          pip install lxml
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
