--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 
-requires = [ "cython", "future", "setuptools>=42" ]
+requires = [ "cython", "setuptools>=42" ]
 
 [tool.ruff]
 lint.extend-ignore = [ "E4", "E7", "F40", "F523", "F601", "F811", "F841" ]
