--- a/.github/workflows/mypy-generated.ini
+++ b/.github/workflows/mypy-generated.ini
@@ -3,7 +3,7 @@ python_version = 3.6
 namespace_packages = False
 ignore_missing_imports = False
 follow_imports = normal
-no_site_packages = True
+no_site_packages = False
 no_silence_site_packages = False
 
 disallow_any_unimported = True
