--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,10 +41,6 @@ jobs:
       # NOTE: we must do all testing on the installed python package, not
       # on the build tree. Otherwise the testing is invalid and may not
       # indicate the code actually works
-      #
-      # Set pythonpath
-
-      # install
       - name: Install mavlink message
         run: |
           git clone https://github.com/ArduPilot/mavlink.git
@@ -56,7 +52,7 @@ jobs:
 
       - name: Lint generated python code
         run: |
-            flake8 --ignore='W503,E203,E501,E741' --statistics dialects/
+            flake8 --config=.github/workflows/flake8-generated.cfg --statistics dialects/
             mypy --config-file ./.github/workflows/mypy-generated.ini dialects/v10/*.py dialects/v20/*.py
 
       - name: Generate messages
